--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libbitcoin0
 Section: libs
 Priority: optional
 Maintainer: Pablo Castellano <pablo@anche.no>
-Build-Depends: debhelper (>= 8.1.3~), pkg-config, autoconf, automake, autotools-dev, libtool, libboost-all-dev, libcurl4-openssl-dev, libleveldb-dev
+Build-Depends: debhelper (>= 8.1.3~), pkg-config, autoconf, automake, autotools-dev, libtool, libboost-all-dev, libcurl4-openssl-dev, libleveldb-dev, libsecp256k1-dev
 Standards-Version: 3.9.4
 Vcs-Git: https://github.com/libbitcoin/libbitcoin.git
 Vcs-Browser: https://github.com/libbitcoin/libbitcoin
