--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libbitcoin0
 Section: libs
 Priority: optional
 Maintainer: Pablo Castellano <pablo@anche.no>
-Build-Depends: debhelper (>= 8.1.3~), pkg-config, autoconf, automake, autotools-dev, libtool, libboost-all-dev, libcurl4-openssl-dev, libleveldb-dev
+Build-Depends: debhelper, pkg-config, autoconf, automake, autotools-dev, libtool, libboost-all-dev, libleveldb-dev, dh-autoreconf, libsecp256k1-dev
 Standards-Version: 3.9.4
 Vcs-Git: https://github.com/libbitcoin/libbitcoin.git
 Vcs-Browser: https://github.com/libbitcoin/libbitcoin
@@ -11,7 +11,7 @@ Homepage: http://libbitcoin.dyne.org/
 Package: libbitcoin-dev
 Section: libdevel
 Architecture: any
-Depends: libbitcoin0 (= ${binary:Version}), ${misc:Depends}
+Depends: libbitcoin0 (= ${binary:Version}), libsecp256k1, ${misc:Depends}
 Description: Asynchronous C++ Bitcoin library - development files
  libbitcoin is a bitcoin library targeted towards high end use. The library
  places a heavy focus around asychronicity. This enables a big scope for
